--- a/packages/client/src/components/styles/NumberPad.css
+++ b/packages/client/src/components/styles/NumberPad.css
@@ -1,6 +1,6 @@
 .number-pad {
   position: absolute;
-  z-index: 1000;
+  z-index: 100;
 }
 
 .number-pad__numbers {
